# tricklepay-contracts

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
contracts/stream/: Cargo.toml
contracts/stream/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs  vesting.rs
scripts/: deploy.sh
